# polymorphic-companion-containers

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.config/: glossary.txt
.github/workflows/: pcc.yml
benches/: companion_stack.rs
examples/: Cargo.toml
examples/src/: companion_stack.rs  lib.rs
src/: companion_stack.rs  exit_guard.rs  lib.rs
