[package]
name = "pcc"
description = "Polymorphic containers to help with memory management"
documentation = "https://docs.rs/pcc"
version = "0.1.0"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/wvwwvwwv/polymorphic-companion-containers/"
license = "Apache-2.0"
categories = ["caching", "data-structures"]
keywords = ["cache", "stack"]

[dependencies]

[workspace]
members = [".", "examples"]

[dev-dependencies]
criterion = "0.5"
