[package]
name = "pcc"
description = "Polymorphic containers for dynamically sized types"
documentation = "https://docs.rs/pcc"
version = "0.1.4"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2024"
rust-version = "1.85.0"
readme = "README.md"
repository = "https://github.com/wvwwvwwv/polymorphic-companion-containers/"
license = "Apache-2.0"
categories = ["caching", "data-structures", "no-std::no-alloc"]
keywords = ["cache", "dynamic", "no_std", "slice", "stack"]

[features]
nightly = []

[workspace]
members = [".", "examples"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "companion_stack"
harness = false
